--- a/shaun-lab23/src/index.html
+++ b/shaun-lab23/src/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Notes And More!</title>
+    <title>Note App</title>
   </head>
   <body>
+    <h1>My Notes App</h1>
     <div id="root"></div>
   </body>
 </html>
